Fix checkbox group gap (https://github.com/woocommerce/woocommerce-admin/pull/3166)

--- a/plugins/woocommerce-admin/client/dashboard/profile-wizard/style.scss
+++ b/plugins/woocommerce-admin/client/dashboard/profile-wizard/style.scss
@@ -215,7 +215,7 @@
 	}
 
 	.woocommerce-profile-wizard__checkbox-group {
-		margin: -$gap -$gap 0 -$gap;
+		margin: #{-$gap} #{-$gap} 0 -#{$gap};
 
 		.muriel-checkbox {
 			margin-top: 0;
